  can be defined as $config["value"] in configs/modname.inc.php files. [Ivo]
+ $config values can now be redirected to a runtime function by defining
  a function called config_<configkey>() or config_<modname>_<configkey>() for
  modules. [Ivo]
+ Added setWidth() and getWidth() function to atkListAttribute to set the
  width of dropdown list in pixels. [Boy]
* Fixed menuitem translations for the outlook and plain menu. [Martin]
* ATK now has a smaller memory footprint and less overhead, due to cleanup 
  of includes. [Peter, Boy, Ivo]
* Changing the gui language through the url should now be done using ?atklng
  instead of ?lng. [Ivo]
* Fixed al lot of PHP notices (error_reporting set to E_ALL). [Martin]
* Fixed mlsplitter::getInstance wich always created a new instance. [Martin]
* Fixed atkonetoonerelation::load() wich didn't set the
   destination filter when using master mode. [Martin]
* Fixed possible sql injection in db authentication. [Ivo]
* atkmlsplitter::addmlcondition() is now recursive to support relations
  with multiple mlnodes. [Martin]
* Added include/exclude lists as param for addmlcondition(). [Sandy]
* Improvements to atkImportHandler:
  * Some functional decomposition applied.
  * Updated documentation.
  * Improved error handling, import documents are validated before 
    they are added. 
  * Fixed bug that would cause first field never to be properly recognized
    at analysis time. [Boy]
* Currency attribute no longer formats the number as a decimal as 
  the numberattribute from which it extends does this anyway. [Boy]
* Fixed extended searching on OneToOne relations. [Boy]
* Removed a call-time-pass-by-reference from the oci9 driver. [Ivo]
* Fixed numerous php notices. (ATK now runs better when error_reporting set to
  E_ALL). [Ivo]
* The alphabetical index no longer breaks the search button. (bug #415) [Ivo]
* Made atkListAttribute searchable in embedded OneToMany. [Yury]